--- a/src/app/component/profile/profile.component.less
+++ b/src/app/component/profile/profile.component.less
@@ -24,6 +24,25 @@
   font-size: 12px;
   color: gray;
 }
+label{
+  font-size: 14px;
+  float: left;
+  display: block;
+  width: 120px;
+}
+input{
+  display: block;
+  width: calc(~'100% - 120px');
+  box-sizing: border-box;
+  padding: 8px 0;
+  font-size: 14px;
+  outline: none;
+  border: none;
+  border-radius: 2px;
+  background: none;
+  border-bottom: 2px solid darkgrey;
+  margin: -2px;
+}
 img{
   float: left;
   width: 100px;
@@ -46,7 +65,10 @@ img{
 .load-img{
   min-height: 100px;
 }
-
+.error{
+  font-size: 14px;
+  color: red;
+}
 
 @media screen and (max-width: 600px){
   .content{
