--- a/src/app/css/index.less
+++ b/src/app/css/index.less
@@ -84,10 +84,11 @@ button, .button {
   &.primary {
     color: @blue-color;
     &:hover{
-      background: @blue-color-light;
+      background: fade(@blue-color, 10%);
     }
-    &.active {
+    &:active {
       border: 1px solid @blue-color;
+      box-shadow: inset 0 1px 10px fade(black, 20%);
     }
   }
 
