--- a/src/app/component/menu/menu-athlete/menu.athlete.item.component/menu.athlete.item.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.item.component/menu.athlete.item.component.less
@@ -7,8 +7,20 @@
   font-size: 12px;
   text-align: right;
 }
+.batt{
+  font-size: 12px;
+  text-align: right;
+}
+.inner-row{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 10px 0;
+  .inner-cell{
+    padding: 0 10px;
+  }
+}
 .status{
-  float: left;
   width: 60px;
   height: 60px;
   margin-top: -2px;
