--- a/src/app/component/menu/menu-athlete/menu.athlete.item.component/menu.athlete.item.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.item.component/menu.athlete.item.component.less
@@ -26,6 +26,7 @@
   margin-top: -2px;
   border-radius: 50%;
   box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+  transition: background-color 2s ease-in;
   &.yellow{
     background: yellow;
   }
