--- a/src/app/component/menu/menu-athlete/menu.athlete.item.component/menu.athlete.item.component.less
+++ b/src/app/component/menu/menu-athlete/menu.athlete.item.component/menu.athlete.item.component.less
@@ -1,51 +1,78 @@
 @import "../../../../css/constant";
-.passed{
+
+.passed {
   font-size: 10px;
   text-align: right;
 }
-.speed{
+
+.speed {
   font-size: 12px;
   text-align: right;
 }
-.batt{
+
+.batt {
   font-size: 12px;
   text-align: right;
 }
-.inner-row{
+
+.inner-row {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin: 10px 0;
-  .inner-cell{
+
+  .inner-cell {
     padding: 0 10px;
   }
 }
-.status{
+
+.status {
   width: 60px;
   height: 60px;
   margin-top: -2px;
   border-radius: 50%;
-  box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+  box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   transition: background-color 2s ease-in;
-  &.yellow{
+
+  &.yellow {
     background: yellow;
   }
-  &.green{
+
+  &.green {
     background: #2ff63a;
   }
-  &.arrow{
+
+  &.arrow {
     background: #3690f6;
   }
+
   padding: 5px;
 }
-img{
+
+img {
   display: block;
   width: 100%;
   height: 100%;
   border-radius: 50%;
 }
-.name{
+
+.name {
   text-align: right;
   margin-left: 70px;
   margin-bottom: 8px;
+  position: relative;
+
+  .location-update {
+    box-shadow: 1px 1px 3px rgba(0,0,0,0.5);
+    position: absolute;
+    left: 100%;
+    top: 0;
+    margin-left: 20px;
+    padding: 5px;
+    background-color: rgba(230, 253, 205, 0.8);
+    white-space: nowrap;
+    font-size: 12px;
+    font-weight: bold;
+
+  }
 }
